--- a/lang/ru.ini
+++ b/lang/ru.ini
@@ -5,5 +5,7 @@ this field not Blank = Поле не должно быть пустым
 this field max length = Превышено максимально допустимое количество
 Hello = Привет
 Logout = Выйти
+Email = Электронная Почта
+Password = Пароль
 Please fill out this field. = Пожалуйста, заполните это поле
 Please enter an email address. = Пожалуйста, введите адрес электронной почты
