add avatar translate

--- a/lang/ru.ini
+++ b/lang/ru.ini
@@ -7,5 +7,6 @@ Hello = Привет
 Logout = Выйти
 Email = Электронная Почта
 Password = Пароль
+Avatar = Аватар
 Please fill out this field. = Пожалуйста, заполните это поле
 Please enter an email address. = Пожалуйста, введите адрес электронной почты
